tests/NormalTests/paczka1/fuzzy1/72394133.err
Error in line 14: VlNpPe S737 96,7
Error in line 15: VlNpPe A848 56,0
Error in line 25: xWKD3 A848 28,9
Error in line 21: 6pMcBdoyN S138 319,7
Error in line 30: uOlZ S737 63,1
Error in line 26: xWKD3 S737 29,0
